--- a/index.html
+++ b/index.html
@@ -78,111 +78,83 @@
     </nav><!-- .nav-menu -->
 
     <div class="social-links">
-      <a href="https://www.linkedin.com/in/vitorandrade" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <a href="https://www.linkedin.com" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       <a href="https://github.com/VitorDSAndrade" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-      <a href="mailto:vitor.andrade.t0120706@edu.atec.pt" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+      <a href="mailto:vitor@email.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
     </div>
 
   </div>
 </header><!-- End Header -->
 
-  <!-- ======= About Section ======= -->
-  <section id="about" class="about">
+<!-- ======= About Section ======= -->
+<section id="about" class="about">
 
-    <!-- ======= About Me ======= -->
-    <div class="about-me container">
+  <div class="about-me container">
+    <div class="section-title">
+      <h2>Sobre</h2>
+    </div>
 
-      <div class="section-title">
-        <h2>About</h2>
+    <div class="row">
+      <div class="col-lg-4" data-aos="fade-right">
+        <img src="assets/img/PFP.png" class="img-fluid" alt="Foto de Vitor Andrade">
       </div>
-
-      <div class="row">
-        <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
-        </div>
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
-          </p>
-          <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
-              </ul>
-            </div>
+      <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+        <p>
+          Sou estudante de Tecnologias de Programação e Sistemas de Informação na ATEC, 
+          com paixão pelo desenvolvimento de aplicações web e desktop. 
+          Gosto de aprender novas tecnologias, resolver problemas e transformar ideias em projetos reais.
+        </p>
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="icofont-rounded-right"></i> <strong>Data de Nascimento:</strong> xxxx</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Telefone:</strong> (+351) 912 345 678</li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="icofont-rounded-right"></i> <strong>Cidade:</strong> Leiria, Portugal</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> Vitor@email.com</li>
+            </ul>
           </div>
         </div>
       </div>
-
-    </div><!-- End About Me -->
+    </div>
+  </div><!-- End About Me -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+  <div class="interests container">
+    <div class="section-title">
+      <h2>Interesses</h2>
+    </div>
 
-      <div class="section-title">
-        <h2>Interests</h2>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-3 col-md-4">
-          <div class="icon-box">
-            <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Software Development</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-          <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #5578ff;"></i>
-            <h3>Machine Learning</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-          <div class="icon-box">
-            <i class="ri-camera-3-line" style="color: #e80368;"></i>
-            <h3>Computer Vision</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
-          <div class="icon-box">
-            <i class="ri-english-input" style="color: #1c7d32;"></i>
-            <h3>Natural Language Processing</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
-            <h3>Software Engineering</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
-            <h3>Visualization</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #47aeff;"></i>
-            <h3>Algorithms</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-image-line" style="color: #ffc107;"></i>
-            <h3>Image Processing</h3>
-          </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-4">
+        <div class="icon-box">
+          <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
+          <h3>Desenvolvimento Web</h3>
         </div>
       </div>
-
-    </div><!-- End Interests -->
+      <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="icon-box">
+          <i class="ri-computer-line" style="color: #5578ff;"></i>
+          <h3>Aplicações Desktop</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="icon-box">
+          <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
+          <h3>Bases de Dados</h3>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+        <div class="icon-box">
+          <i class="ri-gamepad-line" style="color: #ffc107;"></i>
+          <h3>Gaming & Modding</h3>
+        </div>
+      </div>
+    </div>
+  </div><!-- End Interests -->
   </section><!-- End About Section -->
 
 
